welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: value -<= is not a member of Int
  if (a-<=b-10 || a<=c-10 || b<=a-10 || b<=c-10 || c<=a-10 || c<=b-10) {return true}
       ^lessBy10:2: error: value || is not a member of Int
  if (a-<=b-10 || a<=c-10 || b<=a-10 || b<=c-10 || c<=a-10 || c<=b-10) {return true}
               ^